--- a/styles.css
+++ b/styles.css
@@ -79,15 +79,30 @@
 
   --white: #fcfcfc;
   --red: #ee3d38;
+  --album: #11a0a7;
   --black: #181818;
+  --black2: #0000000c;
 }
 
 body {
   font-family: "interCustom", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
   color: var(--white);
   background-color: var(--bg-col);
 }
+
+/* hide page scrollbar */
+html {
+  scrollbar-width: none;
+} /* Firefox */
+body {
+  -ms-overflow-style: none;
+} /* IE and Edge */
+body::-webkit-scrollbar,
+body::-webkit-scrollbar-button {
+  display: none;
+} /* Chrome */
+/* end hide page scrollbar */
 
 /* img {
   width: 100%;
@@ -119,6 +134,16 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+  transition: all 0.2s ease-out;
+}
+
+a:hover,
+a:focus {
+  color: var(--red);
+}
+
+.active {
+  color: var(--red);
 }
 
 /* end universal rules */
@@ -129,18 +154,29 @@ a {
 nav {
   z-index: 1;
   position: fixed;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 2.5em;
-  color: var(--white);
+  border-radius: 1em;
+
+  padding: 1em;
+  margin: 1em;
   font-family: "interCustom";
-  font-weight: 500;
+  display: flex;
+  align-items: center;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.335);
 }
 
 nav ul {
   display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color: var(--white);
+  font-weight: 500;
   gap: 1em;
+  width: 100%;
+}
+
+nav ul li a {
+  font-size: 1.2em;
 }
 
 .navbar-mobile {
@@ -152,22 +188,23 @@ nav ul {
 
 .sticker-container {
   position: absolute;
-  height: 100%;
+
   width: 100%;
   user-select: none;
   pointer-events: none;
-  z-index: -1;
+  z-index: 1111;
   left: 0;
   display: flex;
   justify-content: end;
   padding: 2.5em;
-  align-items: flex-end;
-  bottom: 3em;
+
+  top: 25em;
 }
 
 .img-nuworld {
-  height: 10em;
+  height: 10vw;
   z-index: -1;
+  filter: drop-shadow(0px 0px 3px var(--red));
 }
 
 .hero-section {
@@ -199,7 +236,70 @@ nav ul {
 /* end homepage */
 
 /* start music page */
+.bg-black {
+  background-color: var(--black);
+}
 
+.music-header-container {
+  height: 100svh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  padding: 2.5em;
+  border-bottom: 1px solid var(--white);
+}
+
+.music-album-container {
+  height: 100%;
+  width: 100%;
+  background-color: var(--red);
+  border-top: 1px solid var(--white);
+  padding: 2.5em 0;
+  display: grid;
+
+  grid-template-areas:
+    "1 2"
+    "3 4";
+}
+
+.album {
+  background-color: var(--red);
+  margin: 2em;
+  border-radius: 2em;
+  gap: 2em;
+  display: flex;
+  padding: 2em;
+  box-shadow: 0px 0px 5px rgb(255, 255, 255);
+  border: 2px solid var(--white);
+}
+
+.credits-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.credits h2 {
+  font-size: 1.5em;
+}
+
+.credits-container p {
+  font-size: 1em;
+}
+
+.credits {
+  display: flex;
+  flex-direction: column;
+}
+
+iframe {
+  border: 0;
+  border-radius: 1em;
+  box-shadow: 0px 0px 5px var(--black);
+  width: 15em;
+  height: 15em;
+}
 /* end music page */
 
 /* start media queries */
@@ -212,6 +312,26 @@ nav ul {
     font-size: 10em;
     letter-spacing: 0;
   }
+
+  .img-nuworld {
+    height: 10vw;
+    z-index: -1;
+    filter: drop-shadow(0px 0px 3px var(--red));
+  }
+
+  .sticker-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    user-select: none;
+    pointer-events: none;
+    z-index: 1111;
+
+    left: -10em;
+    padding: 2.5em;
+
+    top: 25em;
+  }
 }
 
 @media (max-width: 1300px) {
@@ -221,6 +341,33 @@ nav ul {
   .hero-title {
     font-size: 7em;
     letter-spacing: 0;
+  }
+  .img-nuworld {
+    height: 15vw;
+    z-index: -1;
+    filter: drop-shadow(0px 0px 3px var(--red));
+  }
+
+  .sticker-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    user-select: none;
+    pointer-events: none;
+    z-index: 1111;
+
+    left: -10em;
+    padding: 2.5em;
+
+    top: 28em;
+  }
+
+  .music-album-container {
+    display: grid;
+
+    grid-template-areas:
+      "1"
+      "2";
   }
 }
 span {
@@ -232,9 +379,28 @@ span {
     align-items: center;
   }
 
+  iframe {
+    border: 0;
+    border-radius: 1em;
+    box-shadow: 0px 0px 15px var(--black);
+    width: 15em;
+    height: 15em;
+  }
+
+  .album {
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    text-align: start;
+  }
+
+  .credits-container {
+    row-gap: 2em;
+  }
+
   .hero-section {
     height: 100svh;
-    background-color: var(--red);
+    background-color: var(--black);
     width: 100vw;
     padding: 2.5em;
   }
@@ -251,18 +417,38 @@ span {
     display: flex;
   }
 
-  .navbar-mobile ul {
+  .img-nuworld {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
+    z-index: 2222;
+    height: 25vw;
   }
 
-  .img-nuworld {
-    display: none;
+  .sticker-container {
+    z-index: 2222;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5em;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
   }
 
   .hero-title {
     font-size: 3em;
     letter-spacing: 0;
+  }
+
+  .music-header-container h1 {
+    font-size: 4em;
+  }
+
+  .music-album-container {
+    display: grid;
+
+    grid-template-areas:
+      "1"
+      "2";
   }
 }
